--- a/blog.html
+++ b/blog.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 <title>
-DhirajBlog
+Shree Balaji Steel Suppliers
 </title>
 <style>
 h1 {text-align: center;}
 </style>
 </head>
 <body>
-<h1>Blog</h1>
+<h1>Shree Balaji Steel Suppliers</h1>
 </body>
 </html>
